--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
     <hr>
     <footer style="text-align: center;">
-        <p>Copyright &copy; 2025 John Doe.</p>
+        <p>Copyright &copy; 2025 Jurnalisa.</p>
     </footer>
 </body>
 </html>
