--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Doe Personal Website</title>
+    <link rel="stylesheet" type="text/CSS" href="css/main.css">
 </head>
 
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="john.pdf">Download CV</a> |
-        <a href="contact.html">Contact</a> |
+        <a href="index.html">Home</a> 
+        <a href="john.pdf">Download CV</a> 
+        <a href="contact.html">Contact</a> 
         <a href="about.html">About me</a>
     </nav>
 
     <hr />
 
     <header style="text-align: center;">
-        <img src="images/johndoe.jpg" width="200" height="200" style="border-radius: 50%;"/>
-        <h1>John Doe</h1>
-        <p>Lorem Ipsum is simply dummy text</p>
+        <img src="images/saya.jpg" width="200" height="200" style="border-radius: 50%;"/>
+        <h1>Maria Jurnalisa Bete</h1>
+        <p>Mahasiswi</p>
     </header>
 
     <hr />
@@ -28,7 +29,7 @@
     <article style="text-align: center;">
         <h2>Tentang Saya</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Saya Masiswi IDB BALI,  Asala saya dari NTT, provinsi  kupang, Kabupaten Malaka. saya melanjutkan pendidikan saya di universitas IDB BALI, dengan Jurusan  yang saya pilih yakni Teknologi Informasi dan Bisnis. Alasan saya memilih jurusan ini agar saya bisa lebih mengetahui betapa pentingnya kita harus memahami dan mengetahui, seberapa berpengaruhnya teknologi bagi manusia saat ini di dunia. saya berharap bisa menyelesaikan studi saya tepat waktu dan saya sudah memiliki skil yang bisa membuat saya makin berkembang dan maju.
         </p>
     </article>
 
@@ -52,16 +53,16 @@
                     </td>
                     <td>
                         <ul>
-                            <li>Berselancar di Internet</li>
-                            <li>Sleep in the Windows</li>
-                            <li>Menulis kode sebanyak 1 juta baris</li>
+                            <li>belajar menggunakan excel</li>
+                            <li>menulis di word</li>
+                            <li>belajar membuat Website</li>
                         </ul>
                     </td>
                     <td>
                         <ul>
-                            <li>Mancing Keributan</li>
-                            <li>Vibe Coding</li>
-                            <li>Scroll Facebook</li>
+                            <li>Menyanyi</li>
+                            <li>suka belajar membuat sesuatu yang baru</li>
+                            <li>nonton</li>
                         </ul>
                     </td>
                 </tr>
@@ -71,7 +72,7 @@
 
     <hr>
     <footer style="text-align: center;">
-        <p>Copyright &copy; 2025 John Doe.</p>
+        <p>Copyright &copy; 2025 Jurnalisa.</p>
     </footer>
 </body>
 </html>
