--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
     <hr />
     <div class="cv" style="text-align: center;">
         <h1>Download MY CV DISINI</h1>
-        <a url="https://drive.google.com/file/d/1FtatojA5T-Z0fVp7grgbvPzjYe_ZE1t8/view?usp=sharing" 
+        <a url="https://drive.google.com/file/d/1e8teEi8ZtYgBEGbMy0f8OR5mD7oFs872/view?usp=drive_link" 
         href="https://drive.google.com/file/d/1FtatojA5T-Z0fVp7grgbvPzjYe_ZE1t8/view?usp=sharing"
         style="font-size: 20px;">Unduh PDF</a>
         <hr />
