--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
     <title>Ahmad Muhardian Personal Website</title>
     <link rel="stylesheet" type="text/CSS" href="css/main.css">
 </head>
-
+<body style="background-image: url('images/gambar\ ab.jpg'); background-size: cover; background-repeat: no-repeat;"></body>
 <body>
-    <nav>
+<body>
+    <nav class="nav" style="text-align: center;">
         <a href="index.html">Home</a> |
         <a href="cv.html">Download CV</a> |
         <a href="contact.html">Contact</a> |
@@ -24,7 +25,7 @@
             PENDIDIKAN
         </p>
         <p>
-            saya melanjutkan pendidikan saya di universitas IDB BALI, dengan Jurusan  yang saya pilih yakni Teknologi Informasi dan Bisnis. Alasan saya memilih jurusan ini agar saya bisa lebih mengetahui betapa pentingnya kita harus memahami dan mengetahui, seberapa berpengaruhnya teknologi bagi manusia saat ini di dunia. saya berharap bisa menyelesaikan studi saya tepat waktu dan saya sudah memiliki skil yang bisa membuat saya makin berkembang dan maju.
+            saya melanjutkan pendidikan saya di IDB BALI, dengan Jurusan  yang saya pilih yakni Teknologi Informasi dan Bisnis. Alasan saya memilih program studi ini agar saya bisa lebih mengetahui betapa pentingnya kita harus memahami dan mengetahui, seberapa berpengaruhnya teknologi bagi manusia saat ini di dunia. saya berharap bisa menyelesaikan studi saya tepat waktu dan saya sudah memiliki skil yang bisa membuat saya makin berkembang dan maju.
         </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8T_nMsRTPcU?si=mxsNWhQGkOOcA_3J" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>
