--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmad Muhardian Personal Website</title>
     <link rel="stylesheet" type="text/CSS" href="css/main.css">
-
-
 </head>
-
+<body style="background-image: url('images/gambar\ hp.jpeg'); background-size: cover; background-repeat: no-repeat;"></body>
 <body>
-    <nav>
+<body>
+    <nav class="nav" style="text-align: center;">
         <a href="index.html">Home</a> |
         <a href="cv.html">Download CV</a> |
         <a href="contact.html">Contact</a> |
