--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <title>John Doe Personal Website</title>
     <link rel="stylesheet" type="text/CSS" href="css/main.css">
 </head>
+<body style="background-image: url('images/images.jpg'); background-size: cover; background-repeat: no-repeat;">
+    
+</body>
 
 <body>
     <nav>
+        <head>
+            <style>
+                nav{
+                    text-align: center;
+                }
+                nav a {
+                font-weight: bold;
+                font-size: 18px;
+                color: black;
+                margin: 0,5;
+                text-decoration: none;
+                }
+            </style>
+        </head>
         <a href="index.html">Home</a> 
         <a href="cv.html">Download CV</a> 
         <a href="contact.html">Contact</a> 
@@ -28,8 +45,8 @@
 
     <article style="text-align: center;">
         <h2>Tentang Saya</h2>
-        <p>
-            Saya Masiswi IDB BALI,  Asala saya dari NTT, provinsi  kupang, Kabupaten Malaka. saya melanjutkan pendidikan saya di universitas IDB BALI, dengan Jurusan  yang saya pilih yakni Teknologi Informasi dan Bisnis. Alasan saya memilih jurusan ini agar saya bisa lebih mengetahui betapa pentingnya kita harus memahami dan mengetahui, seberapa berpengaruhnya teknologi bagi manusia saat ini di dunia. saya berharap bisa menyelesaikan studi saya tepat waktu dan saya sudah memiliki skil yang bisa membuat saya makin berkembang dan maju.
+        <p style="color: black;">
+            Saya Masiswi IDB BALI,  Asala saya dari NTT, provinsi  kupang, Kabupaten Malaka. saya melanjutkan pendidikan saya di IDB BALI, dengan Jurusan  yang saya pilih yakni Teknologi Informasi dan Bisnis. Alasan saya memilih program studi ini agar saya bisa lebih mengetahui betapa pentingnya kita harus memahami dan mengetahui, seberapa berpengaruhnya teknologi bagi manusia saat ini di dunia. saya berharap bisa menyelesaikan studi saya tepat waktu dan saya sudah memiliki skil yang bisa membuat saya makin berkembang dan maju.
         </p>
     </article>
 
