--- a/cv.html
+++ b/cv.html
@@ -6,8 +6,10 @@
     <title>My PDF</title>
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
+<body style="background-image: url('images/gambar\ cv.webp'); background-size: cover; background-repeat: no-repeat;"></body>
 <body>
-    <nav class="nav">
+    <nav>
+    <nav class="nav" style="text-align: center;">
         <a href="index.html">Home</a>
         <a href="cv.html">Download cv</a>
         <a href="contact.html">Contact</a>
@@ -16,8 +18,8 @@
     <hr />
     <div class="cv" style="text-align: center;">
         <h1>Download MY CV DISINI</h1>
-        <a url="https://drive.google.com/file/d/1e8teEi8ZtYgBEGbMy0f8OR5mD7oFs872/view?usp=drive_link" 
-        href="https://drive.google.com/file/d/1FtatojA5T-Z0fVp7grgbvPzjYe_ZE1t8/view?usp=sharing"
+        <a href="file/cv saya.pdf" download="Unduh cv"
+        href="https://drive.google.com/file/d/1e8teEi8ZtYgBEGbMy0f8OR5mD7oFs872/view?usp=sharing"
         style="font-size: 20px;">Unduh PDF</a>
         <hr />
     </div>
