--- a/cv.html
+++ b/cv.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PDF</title>
+    <title><video src="vidios/vidio3.mp4"></video></title>
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
 </head>
 <body style="background-image: url('images/gambar\ cv.webp'); background-size: cover; background-repeat: no-repeat;"></body>
 <body>
+    
     <nav>
     <nav class="nav" style="text-align: center;">
         <a href="index.html">Home</a>
