--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Doe Personal Website</title>
+    <title><video src="vidios/vidio3.mp4"></video></title>
     <link rel="stylesheet" type="text/CSS" href="css/main.css">
 </head>
-<body style="background-image: url('images/images.jpg'); background-size: cover; background-repeat: no-repeat;">
-    
-</body>
+<body style="background-image:url('images/images.jpg'); background-size: cover; background-repeat: no-repeat;">
+   <body>
+    <video autoplay muted loop id="bgvidio">
+    <source src="vidios/vidio3.mp4" type="video/mp4">
+    </video>
+   </body> 
 
+</html>
 <body>
     <nav>
         <head>
